# birdnet-onnx-converter

./: .gitignore  README.md  convert.py  optimize.py  pyproject.toml  requirements-dev.txt  requirements-tflite.txt  requirements.txt  setup.sh
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
tests/: compare_predictions.py  conftest.py  test_convert.py  test_inference.py  test_optimize.py
tests/fixtures/: baseline_predictions.csv
